Update xorg-libx11 pin to work with macOS/ARM64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -38,13 +38,15 @@ requirements:
     - pthread-stubs
     - xorg-fixesproto
     - xorg-kbproto
-    - xorg-libx11 1.6.*
+    - xorg-libx11 >=1.6,<2
+    # Additional constraintless xorg-libx11 dep below is for conda-build to add potential pinning to.
+    - xorg-libx11
     - xorg-util-macros
     - xorg-xextproto
     - xorg-xproto
   run:
     - xorg-fixesproto
-    - xorg-libx11 1.6.*
+    - {{ pin_compatible('xorg-libx11') }}
 
 test:
   commands:
